# structured_dendritic

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  train.py
conf/: config.yaml
conf/data/: aan.yaml  cifar.yaml  imdb.yaml  l5pc.yaml  listops.yaml  pathfinder.yaml  smoke_lm.yaml  smoke_text.yaml  wt103.yaml  wt103_smoke.yaml
conf/experiment/appendix/: listops_ssm_upper_bound.yaml
conf/experiment/dend_ablation_parameter/: listops_bd.yaml  listops_causal.yaml  listops_rs.yaml  listops_sm.yaml
conf/experiment/dend_ablation_structure/: listops_conv1d_res.yaml  listops_gla_res.yaml  listops_rs.yaml  listops_sm.yaml
conf/experiment/l5pc/: cnn7.yaml  factorized_1layer.yaml  factorized_2layer.yaml  matched_residual_s4d.yaml  pointwise_control.yaml  soma_only.yaml
conf/experiment/liq_ssm/: aan_rs.yaml  cifar_rs.yaml  imdb_rs.yaml  listops_rs.yaml  pathfinder_rs.yaml  wt103.yaml
conf/experiment/reviewer_claims/: listops_length_generalization_soma.yaml  listops_length_generalization_ssm_causal.yaml  listops_length_generalization_ssm_reservoir.yaml  listops_low_data_soma.yaml  listops_low_data_ssm_causal.yaml  listops_low_data_ssm_reservoir.yaml  listops_short_budget_soma.yaml  listops_short_budget_ssm_causal.yaml  listops_short_budget_ssm_reservoir.yaml
conf/experiment/reviewer_controls/: listops_pointwise_control.yaml
conf/experiment/s4_debug/: aan.yaml  cifar.yaml  imdb.yaml  listops.yaml  pathfinder.yaml  wt103.yaml
conf/experiment/smoke/: spiking_lm.yaml  spiking_text.yaml
conf/logging/: csv.yaml  tensorboard.yaml
conf/model/: conv1d_bidir.yaml  conv1d_causal.yaml  conv1d_reservoir.yaml  gla_bidir.yaml  gla_causal.yaml  gla_reservoir.yaml  l5pc_cnn7.yaml  l5pc_factorized.yaml  l5pc_residual_s4d.yaml  pointwise_control.yaml  s4d_standard_bidir.yaml  s4d_standard_causal.yaml  soma.yaml  ssm_bidir.yaml  ssm_causal.yaml  ssm_reservoir.yaml
conf/optimizer/: adamw.yaml
conf/paths/: default.yaml
conf/scheduler/: cosine.yaml  none.yaml
conf/task/: classification.yaml  l5pc_emulation.yaml  language_modeling.yaml
conf/trainer/: default.yaml
scripts/: plot_l5pc_figure.py  run_l5pc_suite.py  run_result1.sh  run_result1_figure2_sweeps.sh
structured_dendrite/: __init__.py  experiment.py
structured_dendrite/data/: __init__.py  datamodule.py  l5pc.py  tokenization.py
structured_dendrite/models/: __init__.py  backbone.py  l5pc.py
structured_dendrite/models/dendrites/: __init__.py  base.py  conv.py  gla.py  optim.py  s4d.py
structured_dendrite/models/spiking/: __init__.py  lif.py
structured_dendrite/tasks/: __init__.py
